2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* CDATASection.pm (is_element_content_whitespace): New.

	* DOMElement.pm (has_attribute): Alpha version.
	(create_element, create_element_ns): Implemented.

	* DocumentType.pm (get_general_entity_node): Alpha version.

	* EntityReference.pm (create_entity_reference): Implemented.

	* ProcessingInstruction.pm (create_processing_instruction): Implemented.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* Attr.pm (create_attribute, create_attribute_ns): Implemented.

	* DOMDocument.pm: Load character classes from |Char::Class::XML|.
	(compat_mode): Check |defined| not to be warned as "uninitialized"
	when |{manakai_compat_mode}| is |undef|.

	* DOMException.pm (INVALID_CHARACTER_ERR, NAMESPACE_ERR): Added.

	* DOMImplementationRegistry.pm, DOMImplementationSource.pm:
	Statements to set |$Error::Depth| are removed since they
	are result in "uninitialized" warnings unless
	the |Message::DOM::DOMException| module is loaded earlier.
	Usually methods invoked in these methods does not 
	raise any exception so that it makes no difference.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* DOMDocument.pm (adopt_node): Implemented.
	(doctype): Implemented.

	* DOMElement.pm (remove_attribute_node): Alpha version.

	* DOMException.pm (ADOPT_NODE_TYPE_NOT_SUPPORTED_ERR): New 
	error type.

	* Node.pm (set_user_data): Implemented.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>

	* DOMImplementation.pm (new): New method name for |____new|.
	It will be defined in the DOM Perl Binding specification
	as part of |DOMImplementation| interface.
	($HasFeature): Defined for features support.
	(has_feature, get_feature): Implemented.

	* DOMStringList.pm: Don't load the |Message::DOM::DOMException|
	module unless necessary.
	(___report_error): Removed since it is not used in fact.

	* DOMImplementationList.pm, DOMImplementationSource.pm,
	DOMImplementationRegistry.pm: New modules.

2007-07-07  Wakaba  <wakaba@suika.fam.cx>
