@@ -1,5 +1,10 @@
 2007-07-07  Wakaba  <wakaba@suika.fam.cx>
 
+	* DOM-Node.t: Test data for |manakai_read_only|
+	attribute are added.
+
+2007-07-07  Wakaba  <wakaba@suika.fam.cx>
+
 	* DOM-Element.t: New tests for |create_element|
 	and |create_element_ns| are added.
 
