@@ -1,5 +1,16 @@
 2007-07-07  Wakaba  <wakaba@suika.fam.cx>
 
+	* DOMDocument.pm (get_element_by_id): Implemented.
+	(create_document): Implemented.
+
+	* DOMException.pm (EXTERNAL_OBJECT_ERR, INUSE_DOCTYPE_ERR): New
+	errors.
+	(QNAME_NULLNS_ERR): New errors.
+
+	* DocumenType.pm (create_document_type): Implemented.
+
+2007-07-07  Wakaba  <wakaba@suika.fam.cx>
+
 	* CDATASection.pm (is_element_content_whitespace): New.
 
 	* DOMElement.pm (has_attribute): Alpha version.
